visuals added for scribbles

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
      "text": [
       "(512, 640, 3)\n",
       "(512, 640)\n",
-      "(441, 590)\n"
+      "(512, 640)\n"
      ]
     }
    ],
@@ -22,7 +22,7 @@
     "print(image.shape)\n",
     "mask = cv2.imread(\"output/predicted1_test.jpg\", cv2.IMREAD_GRAYSCALE)\n",
     "print(mask.shape)\n",
-    "gt = cv2.imread(\"output/gt.jpg\", cv2.IMREAD_GRAYSCALE)\n",
+    "gt = cv2.imread(\"output/gt_test.jpg\", cv2.IMREAD_GRAYSCALE)\n",
     "print(gt.shape)\n",
     "# indx = np.asarray(np.where(mask>=200)).T\n",
     "# print(indx.shape)\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,20 +50,53 @@
     "    gt = gt[:,:,None]\n",
     "comp = (image*0.5 + color_mask*mask*0.5).astype(np.uint8)\n",
     "# comp = (image*0.5 + gt_mask*gt*0.5).astype(np.uint8)\n",
+    "p_scribble = cv2.imread(\"s1.png\", cv2.IMREAD_GRAYSCALE)\n",
+    "n_scribble = cv2.imread(\"s2.png\", cv2.IMREAD_GRAYSCALE)\n",
+    "bg_scribble = cv2.imread(\"bg_scribble.png\", cv2.IMREAD_GRAYSCALE)\n",
+    "bg_scribble_mi = cv2.imread(\"bg_scribble_mivos1.png\", cv2.IMREAD_GRAYSCALE)\n",
+    "bg_scribble_mi1 = cv2.imread(\"bg_scribble_mivos2.png\", cv2.IMREAD_GRAYSCALE)\n",
     "\n",
-    "scribble = cv2.imread(\"s1.png\", cv2.IMREAD_GRAYSCALE)\n",
-    "comp[scribble>0.5, :] = np.array([0, 0, 255], dtype=np.uint8)"
+    "comp[p_scribble>0.5, :] = np.array([0, 0, 255], dtype=np.uint8)\n",
+    "comp[n_scribble>0.5, :] = np.array([255, 0, 0], dtype=np.uint8)\n",
+    "comp[bg_scribble>0.5, :] = np.array([0, 255, 255], dtype=np.uint8)\n",
+    "comp[bg_scribble_mi>0.5, :] = np.array([255, 255, 0], dtype=np.uint8)\n",
+    "comp[bg_scribble_mi1>0.5, :] = np.array([255, 0, 255], dtype=np.uint8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "cv2.imshow(\"mask\",comp)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "255"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image = image>=0\n",
+    "gt = gt>128\n",
+    "n = (image & ~gt).astype(np.uint8)*255\n",
+    "fp = (mask & ~gt).astype(np.uint8)*255\n",
+    "fn = (~mask & gt).astype(np.uint8)*255\n",
+    "np.max(n)"
    ]
   },
   {
