--- a/test.ipynb
+++ b/test.ipynb
@@ -2,28 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(512, 640, 3)\n",
-      "(512, 640)\n",
-      "(512, 640)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
-    "image = cv2.imread(\"test.jpg\")\n",
-    "print(image.shape)\n",
-    "mask = cv2.imread(\"output/predicted1_test.jpg\", cv2.IMREAD_GRAYSCALE)\n",
-    "print(mask.shape)\n",
-    "gt = cv2.imread(\"output/gt_test.jpg\", cv2.IMREAD_GRAYSCALE)\n",
-    "print(gt.shape)\n",
+    "import torch.nn.functional as F\n",
     "# indx = np.asarray(np.where(mask>=200)).T\n",
     "# print(indx.shape)\n",
     "# for i in range(indx.shape[0]):\n",
@@ -32,8 +17,121 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Interpolating image, mask and scribbles"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def interpolate_image(img_path, factor, color = False):\n",
+    "    if color:\n",
+    "        image = cv2.imread(img_path)\n",
+    "        image = torch.from_numpy(image).permute(2,0,1).unsqueeze(0)\n",
+    "        resized_image = F.interpolate(image, scale_factor=factor).squeeze(0)\n",
+    "        resized_image = np.array(resized_image.permute(1,2,0))\n",
+    "    else:\n",
+    "        image = cv2.imread(img_path, cv2.IMREAD_GRAYSCALE)\n",
+    "        image = torch.from_numpy(image).unsqueeze(0).unsqueeze(0)\n",
+    "        resized_image = F.interpolate(image, scale_factor=factor).squeeze(0).squeeze(0)\n",
+    "        resized_image = np.array(resized_image)\n",
+    "    return resized_image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/rana/anaconda3/envs/mask2former/lib/python3.8/site-packages/torch/nn/functional.py:3657: UserWarning: The default behavior for interpolate/upsample with float scale_factor changed in 1.6.0 to align with other frameworks/libraries, and now uses scale_factor directly, instead of relying on the computed output size. If you wish to restore the old behavior, please set recompute_scale_factor=True. See the documentation of nn.Upsample for details. \n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "factor = [0.25,0.25]\n",
+    "image = interpolate_image(\"test.jpg\", factor=factor, color= True)\n",
+    "mask = interpolate_image(\"output/predicted1_test.jpg\", factor=factor)\n",
+    "color_mask = np.zeros_like(image, dtype=np.uint8)\n",
+    "gt_mask = np.zeros_like(image, dtype=np.uint8)\n",
+    "\n",
+    "color_mask[:,:,1] = 1\n",
+    "gt_mask[:,:,0] = 1\n",
+    "\n",
+    "if len(mask.shape) == 2:\n",
+    "    mask = mask[:,:,None]\n",
+    "\n",
+    "if len(gt.shape) == 2:\n",
+    "    gt = gt[:,:,None]\n",
+    "comp = (image*0.5 + color_mask*mask*0.5).astype(np.uint8)\n",
+    "# comp = (image*0.5 + gt_mask*gt*0.5).astype(np.uint8)\n",
+    "p_scribble = interpolate_image(\"s1.png\", factor=factor)\n",
+    "n_scribble = interpolate_image(\"s2.png\", factor=factor)\n",
+    "bg_scribble =  interpolate_image(\"bg_scribble.png\", factor=factor)\n",
+    "bg_scribble_mi = interpolate_image(\"bg_scribble_mivos1.png\", factor=factor)\n",
+    "bg_scribble_mi1 =interpolate_image(\"bg_scribble_mivos2.png\", factor=factor)\n",
+    "\n",
+    "comp[p_scribble>0.5, :] = np.array([0, 0, 255], dtype=np.uint8)\n",
+    "comp[n_scribble>0.5, :] = np.array([255, 0, 0], dtype=np.uint8)\n",
+    "comp[bg_scribble>0.5, :] = np.array([0, 255, 255], dtype=np.uint8)\n",
+    "comp[bg_scribble_mi>0.5, :] = np.array([255, 255, 0], dtype=np.uint8)\n",
+    "comp[bg_scribble_mi1>0.5, :] = np.array([255, 0, 255], dtype=np.uint8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv2.imshow(\"mask\",comp)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## original image, mask and scribbles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "(512, 640)\n",
+      "(512, 640)\n"
+     ]
+    }
+   ],
+   "source": [
+    "image = cv2.imread(\"test.jpg\")\n",
+    "print(len(image.shape))\n",
+    "mask = cv2.imread(\"output/predicted1_test.jpg\", cv2.IMREAD_GRAYSCALE)\n",
+    "print(mask.shape)\n",
+    "gt = cv2.imread(\"output/gt_test.jpg\", cv2.IMREAD_GRAYSCALE)\n",
+    "print(gt.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,13 +163,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
     "cv2.imshow(\"mask\",comp)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test "
    ]
   },
   {
@@ -143,10 +248,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/rana/anaconda3/envs/mask2former/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = torch.zeros((20,20))\n",
+    "b = torch.ones((20,20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 20, 20])"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = torch.stack([a,b],0)\n",
+    "c.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = a.unsqueeze(0).unsqueeze(0)\n",
+    "b = b.unsqueeze(0).unsqueeze(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 2, 20, 20])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = torch.cat([a,b], 1)\n",
+    "t.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from util.tensor_util import pad_divide_by\n",
+    "t, _ = pad_divide_by(t, 16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 2, 32, 32])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.shape"
+   ]
   },
   {
    "cell_type": "code",
